# studioslab

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  count.sh  total-lines.txt
Notebooks/: Alonso & Finn Q7.1.ipynb  CoreFields.xopp  Quasi-shock-wave-1D.ipynb  Quasi-shock-wave-1Da.ipynb  Teorema de Picard em R2.ipynb  ThermalAnalysisVShape.ipynb  phi4.ipynb
Notebooks/.ipynb_checkpoints/: Quasi-shock-wave-1D-checkpoint.ipynb  Teorema de Picard em R2-checkpoint.ipynb  ThermalAnalysisVShape-checkpoint.ipynb
Snippets/SFMLSnippet/: CMakeLists.txt  main.cpp
Snippets/SFMLSnippet/Graph/: Graph.h
Studios/CH/: CHInterface.py  Makefile  link.cpp  link.h  link.i  main.py
Studios/CH/CH/: CHData.h  CahnHilliard.h  coeffs.h  defs.h
Studios/CH/CH/CH-cpp/: CH-cpp.pro  CHData.cpp  CHData.h  CahnHilliard.cpp  CahnHilliard.h  coeffs.cpp  coeffs.h  defs.cpp  defs.h  langevin.cpp  langevin.h  main.cpp  outputopengl.cpp  outputopengl.h  simulation.cpp  simulation.h
Studios/CH/CH/CH-cpp/nb/: Potential.ipynb
Studios/KubaskiKlimasQBalls/: CMakeLists.txt  Integrator.cpp  Integrator.h  NanoGUITest.cpp  NuklearInclude.h  main.cpp
Studios/MarylouStrings/: CMakeLists.txt  Integrator.cpp  Integrator.h  NuklearImplementation.cpp  NuklearInclude.h  main.cpp
Studios/MarylouStrings/Data/: MarylouStrings  data.txt  plot.gp
Studios/MarylouStrings/Notebooks/: MarylouStrings.nb
Studios/Shader_fooling/: plots.frag  plots.py  plots.vert
Studios/Shaders/: Fields2DShaders.klproj
Studios/Snippets/SFMLSnippet/: Viewer.h
Studios/Wolfeinstein/Wolfenstein4D/build-main-Desktop-Release/: main
Studios/Wolfeinstein/Wolfenstein4D/calc/: pert.ipynb
Studios/Wolfeinstein/Wolfenstein4D/calc/.ipynb_checkpoints/: pert-checkpoint.ipynb
Studios/Wolfeinstein/Wolfenstein4D/code/: CMakeLists.txt  block-intersector.cpp  block.h  canvas.cpp  canvas.h  main.cpp  map.h  minimap.h  player.h  ray.cpp
Studios/Wolfeinstein/wolfeinstein-4d/calc/: pert.ipynb  sphere.ipynb
Studios/Wolfeinstein/wolfeinstein-4d/main/: .gitignore  CMakeLists.txt  block-intersector.cpp  block-intersector.h  fastmath.h  main.cpp  math_defs.h  minimap.h  player.cpp  player.h  ray.cpp  ray.h  raycaster.cpp  raycaster.h
